<resources>
    <!-- trash -->
    <string name="my_fridge">MyFridge</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation -->
    <string name="fridge">Fridge</string>
    <string name="home">Home</string>
    <string name="cooking">Cooking</string>
    <string name="check_list">Check List</string>
    <string name="statistics">Statistics</string>

    <!-- Registration -->
    <string name="registration">Registration</string>
    <string name="step_1">STEP 1</string>
    <string name="step_2">STEP 2</string>
    <string name="step_3">STEP 3</string>
    <string name="please_enter_your_phone_number">Please enter your Phone Number</string>
    <string name="wrong_phone_number_entered">Wrong phone number entered</string>
    <string name="send_sms_with_code">Send SMS with code</string>
    <string name="or">or</string>
    <string name="sms_with_code_send_to_number">SMS with code send to number</string>
    <string name="enter_code_from_below">Enter code from below</string>
    <string name="wrong_code_entered">Wrong code entered</string>
    <string name="resent_sms_code">Resent SMS code</string>
    <string name="confirm">Confirm</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="complete">Complete</string>
    <string name="skip">Skip</string>
    <string name="authorization">Authorization..</string>
    <string name="click_here_to_add_photo">Click here to add photo</string>

    <!-- take photo dialog -->
    <string name="choose_existing">Choose existing</string>
    <string name="take_photo">Take photo</string>
    <string name="cancel">Cancel</string>

    <!-- profile -->
    <string name="profile_name">Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone_number">Phone Number</string>
    <string name="save">Save</string>

    <!-- tabs -->
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="milk_products">Milk products</string>
    <string name="meat">Meat</string>
    <string name="other">Other</string>

    <!-- FAB -->
    <string name="add_product">Add new product</string>

    <!-- dialog new product -->
    <string name="new_product">New product</string>
    <string name="product_name">Name</string>
    <string name="product_category">Category</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>

    <string name="pick_category">Choose category</string>
    <string name="number">1</string>

    <!-- dialog new checklist -->
    <string name="new_checklist">New check list</string>
    <string name="checklist_title">Title</string>
    <string name="checklist_product_helper">Input each product on a new line</string>
    <string name="checklist_product">Products</string>

</resources>