<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_fridge"
        android:title="@string/fridge" />
    <item
        android:id="@+id/checkListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_check_list"
        android:title="@string/check_list" />
    <item
        android:id="@+id/recipesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_recipes"
        android:title="@string/recipes" />
    <item
        android:id="@+id/statisticsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics" />


</menu>