<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/primary_round_dialog"
    android:gravity="center">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_product"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/productNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:layout_marginVertical="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/productCategoryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_category"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginHorizontal="10dp"
            android:background="@color/transparent"
            android:text="@string/dialog_cancel"
            android:textColor="@color/light_grey"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginHorizontal="10dp"
            android:background="@color/transparent"
            android:text="@string/dialog_ok"
            android:textColor="@color/light_grey"
            />
    </LinearLayout>


</LinearLayout>