<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/primary_round_dialog"
    android:gravity="center"
    android:orientation="vertical">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_checklist"
        android:textAlignment="center"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/checklist_title_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:hint="@string/checklist_title"
        android:maxLength="15"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/checkList_product_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:hint="product"
        android:maxLength="15"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_checklist_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0.5"
            android:background="@color/transparent"
            android:text="@string/dialog_cancel"
            android:textColor="@color/light_grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_checklist_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0.5"
            android:background="@color/transparent"
            android:text="@string/dialog_ok"
            android:textColor="@color/light_grey" />
    </LinearLayout>


</LinearLayout>