<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration.RegFirstStepFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/step_1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/please_enter_your_phone_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:ccp_contentColor="@color/white"
            app:ccpDialog_textColor="@color/white"
            app:ccp_countryPreference="BY,RU,UA,US"
            app:ccp_defaultNameCode="BY"
            app:ccp_flagBorderColor="#505050"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:ccp_textSize="20sp" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:drawableBottom="#b0b0b0"
            android:imeOptions="actionDone"
            android:maxLength="10"
            android:textColor="@color/white"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/errorPhoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:text="@string/wrong_phone_number_entered"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="normal"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/light_grey"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/send_sms_with_code"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/or"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/light_grey"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp" />
</LinearLayout>