<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll"
    tools:context=".ui.main.ProfileActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_name"
        android:textColor="@color/grey"
        android:textSize="11sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_last_name"
        android:textColor="@color/grey"
        android:textSize="11sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_email"
        android:textColor="@color/grey"
        android:textSize="11sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profilePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_phone_number"
        android:textColor="@color/grey"
        android:textSize="11sp" />

</LinearLayout>